--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -36,8 +36,10 @@ $medium-screen: 990px;
 
 .content-sides-padding {
     padding-left: 146px;
+    padding-right: 146px;
     @media screen and (max-width: $large-screen) {
         padding-left: 40px;
+        padding-right: 40px;
     }
 }
 
@@ -230,7 +232,7 @@ $medium-screen: 990px;
 
     @media screen and (max-width: $medium-screen) {
         font-size: 20px;
-        padding-top: 30px;
+        padding-top: 10px;
     }
 }
 
@@ -250,13 +252,13 @@ $medium-screen: 990px;
 .footer-site_link {
     text-decoration: none;
     color: #fff;
-    margin-top: 60px;
-    margin-bottom: 60px;
+    margin-top: 40px;
+    margin-bottom: 40px;
     display: inline-block;
 
     @media screen and (max-width: $medium-screen) {
-        margin-top: 30px;
-        margin-bottom: 30px;
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
 }
 
